2014-02-20  Agustin Henze  <tin@sluc.org.ar>

	* libm/complex/complex.tex: Fix wrong syntax in documentation.
	* libm/math/math.tex: Ditto.

2014-02-20  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdio/open_memstream.c (internal_open_memstream_r): Initialize
	c->pos to 0.

2014-02-11  Joey Ye  <joey.ye@arm.com>

	* libc/sys/arm/syscalls.c (_sbrk): Define as weak symbols.
	(_read, _write): Ditto.

2014-02-09  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/pwd.h: Include <sys/cdefs.h>.
	* libc/include/grp.h: Ditto.

2014-02-04  Matthias Braun  <matze@braunis.de>

	* libm/mathfp/sf_numtest.c: Fix NaN/Inf detection logic.

2014-01-20  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/setjmp.h (longjmp): Fix copy/paste error.

2014-01-19  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/setjmp.h (longjmp): Mark "noreturn" when building with
	GCC.

2014-01-17  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/pwd.h: Use __foo_VISIBLE macros from sys/cdefs.h.
	(setpassent): Declare.

2014-01-17  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/_default_fcntl.h (LOCK_SH): Define.
	(LOCK_EX): Likewise.
	(LOCK_NB): Likewise.
	(LOCK_UN): Likewise.
	(flock): Declare.

2014-01-17  Corinna Vinschen  <vinschen@redhat.com>

	Introduce _STDIO_BSD_SEMANTICS flag to switch fclose/exit file flushing
	semantics from POSIX to BSD.
	* libc/stdio/fclose.c (_fclose_r): Conditionalize file flushing on
	_STDIO_BSD_SEMANTICS.  Call __sflush_r rather than _fflush_r.  Add
	comment.
	* libc/stdio/fflush.c (__sflushw_r): New function, only available
	if _STDIO_BSD_SEMANTICS is defined.
	* libc/stdio/findfp.c (_cleanup_r): Call _fwalk_reent rather than
	_fwalk.  Conditionalize cleanup function call on _STDIO_BSD_SEMANTICS.
	Add comments.  Add FIXME.
	* libc/stdio/local.h (__sflushw_r): Declare if _STDIO_BSD_SEMANTICS is
	defined.

2014-01-06  Sebastian Huber  <sebastian.huber@embedded-brains.de>
